<resources>
    <string name="app_name">Core Furniture 3D</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Catalogue</string>
    <string name="menu_gallery">Nous Trouver</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="home_second">Home Second</string>

    <string name="menu_localisation">Nous trouver</string>
    <string name="menu_catalogue">Catalogue</string>
    <string name="menu_panier">Panier</string>
    <string name="menu_contact">Nous Contacter</string>
    <string name="menu_rite">Nous Noter</string>
    <string-array name="Nom_Meuble">
        <item>Fauteuil Gris</item>
        <item>Fauteuil une place</item>
        <item>Bureau</item>
        <item>Banc</item>
        <item>Table</item>
        <item>Fauteuil trois places</item>
        <item>Fauteuil simple</item>
        <item>Salon</item>
        <item>Etagère</item>
        <item>Commande</item>
        <item>Cuisine</item>
    </string-array>


    <!-- Facebook application ID and custom URL scheme (app ID prefixed by 'fb'). -->
    <!-- ... -->

    <string name="fb_login_protocol_scheme">fb863309070805265</string>

    <!-- ... -->
    <string name="facebook_application_id" translatable="false">863309070805265</string>
    <!-- Facebook Application ID, prefixed by 'fb'. Enables Chrome Custom tabs. -->
    <string name="facebook_login_protocol_scheme" translatable="false">863309070805265</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_ajouter_meuble">AjouterMeuble</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

</resources>
