<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_catalogue" />
        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/ic_location_on_black_24dp"
            android:title="@string/menu_localisation" />
        <item
            android:id="@+id/panierfrgt"
            android:icon="@drawable/ic_shopping_cart_black_24dp"
            android:title="@string/menu_panier" />
        <item
            android:id="@+id/nav_contact"
            android:icon="@drawable/ic_phone_black_24dp"
            android:title="@string/menu_contact" />

        <item
            android:id="@+id/nav_rate"
            android:icon="@drawable/ic_star_half_black_24dp"
            android:title="@string/menu_rite" />

    </group>

</menu>
